# SM-S901U_NA_12_Kernel

kernel_platform/msm-kernel/: .legofile
kernel_platform/msm-kernel/arch/arm64/boot/dts/samsung/rainbow/r0q/: r0q_usa_singlew_w00_r01.dts  r0q_usa_singlew_w00_r02.dts  r0q_usa_singlew_w00_r04.dts  r0q_usa_singlew_w00_r05.dts  r0q_usa_singlew_w00_r06.dts  r0q_usa_singlew_w00_r07.dts  r0q_usa_singlew_w00_r08.dts  r0q_usa_singlew_w00_r09.dts  r0q_usa_singlew_w00_r10.dts  r0q_usa_singlew_w00_r11.dts  r0q_usa_singlew_w00_r12.dts
kernel_platform/msm-kernel/drivers/battery/fuelgauge/max77705_fuelgauge/: .max77705_fuelgauge.dtsi.lego.updated  max77705_fuelgauge.dtsi
kernel_platform/prebuilts-master/clang/host/linux-x86/: BINUTILS_KERNEL_DEPRECATION.md  BUILD.bazel  METADATA  README.md  cc_toolchain_config.bzl  go.mod
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-bootstrap/lib64/: libRemarks.so.12git  libc++abi.so.1  liblldbIntelFeatures.so.12git
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-bootstrap/lib64/clang/12.0.1/lib/linux/: libclang_rt.asan-arm-android.map.txt  libclang_rt.asan-i686-android.map.txt  libclang_rt.asan-x86_64-android.map.txt  libclang_rt.asan-x86_64.a.syms  libclang_rt.hwasan-aarch64-android.map.txt  libclang_rt.msan-x86_64.a.syms  libclang_rt.tsan-x86_64.a.syms  libclang_rt.ubsan_standalone-i686-android.map.txt
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/c++/v1/: __config
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/clang/Basic/: DiagnosticIndexName.inc  DiagnosticSemaKinds.inc
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/clang/Config/: config.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/clang/Driver/: Options.inc
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/clang/Sema/: AttrParsedAttrImpl.inc
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/lldb/Host/: Config.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/llvm/Config/: llvm-config.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/llvm/Frontend/OpenACC/: ACC.cpp.inc  ACC.h.inc
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/llvm/IR/: IntrinsicEnums.inc  IntrinsicImpl.inc  IntrinsicsAArch64.h  IntrinsicsAMDGPU.h  IntrinsicsARM.h  IntrinsicsBPF.h  IntrinsicsHexagon.h  IntrinsicsMips.h  IntrinsicsNVPTX.h  IntrinsicsPowerPC.h  IntrinsicsR600.h  IntrinsicsRISCV.h  IntrinsicsS390.h  IntrinsicsWebAssembly.h  IntrinsicsX86.h  IntrinsicsXCore.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/include/llvm/Support/: VCSRevision.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/lib64/: libRemarks.so.11git  libedit.so.0  liblldb.so.11git  liblldbIntelFeatures.so.11git  libxml2.so.2.9.10
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/lib64/clang/11.0.5/lib/linux/: libclang_rt.asan-aarch64-android.map.txt  libclang_rt.asan-arm-android.map.txt  libclang_rt.asan-i686-android.map.txt  libclang_rt.asan-x86_64.a.syms  libclang_rt.hwasan-aarch64-android.a.syms  libclang_rt.hwasan-aarch64-android.map.txt  libclang_rt.msan-x86_64.a.syms  libclang_rt.tsan-x86_64.a.syms
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/lib64/cmake/clang/: ClangConfig.cmake  ClangTargets-release.cmake  ClangTargets.cmake
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r399163b/lib64/cmake/llvm/: LLVMConfig.cmake  LLVMConfigVersion.cmake  LLVMExports-release.cmake  LLVMExports.cmake
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/: AndroidVersion.txt  manifest_7416131.xml
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/include/clang/Basic/: Version.inc
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/include/clang/Config/: config.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/include/llvm/Config/: llvm-config.h
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/lib64/: libRemarks.so.12git  libc++.so.1  libc++abi.so.1  libedit.so.0  libform.so.6  liblldb.so.12git  liblldbIntelFeatures.so.12git  libncurses.so.6  libomptarget.so.12git  libpanel.so.6  libxml2.so.2.9.10
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-r416183c/lib64/cmake/llvm/: LLVMConfig.cmake  LLVMConfigVersion.cmake
kernel_platform/prebuilts-master/clang/host/linux-x86/clang-stable/: README.md
kernel_platform/prebuilts-master/clang/host/linux-x86/llvm-binutils-stable/: llvm-addr2line  llvm-ar  llvm-as  llvm-cov  llvm-cxxfilt  llvm-dis  llvm-dwarfdump  llvm-link  llvm-modextract  llvm-nm  llvm-objcopy  llvm-objdump  llvm-profdata  llvm-ranlib  llvm-readelf  llvm-readobj  llvm-size  llvm-strings  llvm-strip  llvm-symbolizer
kernel_platform/prebuilts-master/clang/host/linux-x86/soong/: clangprebuilts.go
